# merlin-ios

./: .gitignore  MerlinTranscriptApi.podspec  Package.swift  README.md
MerlinTranscriptApi.xcodeproj/: project.pbxproj
MerlinTranscriptApi.xcodeproj/project.xcworkspace/: contents.xcworkspacedata
Sources/: MerlinTranscriptApi.swift  SwiftBridgeCore.swift  merlin-transcript.swift
Tests/: RaiseTranscriptTests.swift
bindings/: Cargo.toml  build.rs  build.sh
bindings/src/: lib.rs
bindings/xcframework/merlin_transcript.xcframework/: Info.plist
bindings/xcframework/merlin_transcript.xcframework/ios-arm64/Headers/: module.modulemap
bindings/xcframework/merlin_transcript.xcframework/ios-arm64_x86_64-simulator/Headers/: merlin-transcript.h
